# AceBet

./: .dockerfileignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  model_2023-07-27-20-05.joblib  model_2023-07-27-20-07.joblib  model_2023-08-06-16-06.joblib  model_2023-08-14-15-28.joblib  model_2023-08-14-15-42.joblib  pyproject.toml  requirements-doc.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  sportbet.yml
.github/workflows/: black.yml  main.yaml  main.yml  testing.yml
nb/: atp_tennis.ipynb  simple_logreg_final.ipynb  soccer_eda.ipynb  tennis_data_processing.ipynb  tennis_eda.ipynb
src/acebet/: __init__.py
src/acebet/api/: acebet_api.py  auth.py  predict_winner.py
src/acebet/app/: main.py
src/acebet/app/dependencies/: auth.py  data_models.py  logging_user.py  predict_winner.py
src/acebet/data/: atp_data_sample.feather  model_2025-02-22-19-08.joblib
src/acebet/dataprep/: dataprep.py
src/acebet/train/: train.py
src/api/: acebet_api.py  predict_winner.py
src/dataprep/: dataprep.py
src/models/: predict.py  train.py
tests/: test_acebet.py
