[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "acebet.__version__"}

[tool.setuptools]
package-data = {"*" = ["**/*.joblib"]}

[project]
name = "acebet"
dynamic = ["version"]
requires-python = ">=3.11"
description = "Oracle of the Tennis Champion, mock-up of a bet prediction app"
authors = [{name = "Thomas Bury", email = "bury.thomas@gmail.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["tennis", "bet", "prediction", "oracle", "sportbet"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
  "python-jose[cryptography]>=3.3.0",
  "lightgbm==3.3.1",
  "matplotlib>=3.7",
  "numpy>=1.21",
  "pandas>=2.0",
  "scikit_learn>=1.3",
  "scipy>=1.8.0",
  "seaborn>=0.11.2",
  "tqdm>=4.62.3",
  "passlib>=1.7.4",
  "pydantic>=1.10.9",
  "joblib>=1.2.0"

]

[project.urls]
homepage = "https://github.com/ThomasBury/AceBet"
documentation = "https://github.com/ThomasBury/AceBet"
repository = "https://github.com/ThomasBury/AceBet.git"
changelog = "https://github.com/ThomasBury/AceBet"
Tracker = "https://github.com/ThomasBury/AceBet/issues"

[project.optional-dependencies]
doc = [
    "ipykernel",
    "ipython_genutils",
    "pandoc",
    "sphinx>=7.0.0",
    "sphinxawesome-theme>=4.1.0",
    "nbsphinx>=0.9.2",
    "sphinx-autodoc-typehints>=1.21.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.1",
]
lint = [
    "black",
    "flake8"
]
test = [
    "python-multipart>=0.0.6",
    "pytest",
    "pytest-cov",
]
