
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "acebet.__version__"}

[tool.setuptools]
package-data = {"*" = ["**/*.joblib"]}

[project]
name = "acebet"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Oracle of the Tennis Champion, mock-up of a bet prediction app"
authors = [{name = "Thomas Bury", email = "bury.thomas@gmail.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["tennis", "bet", "prediction", "oracle", "sportbet"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
  "python-jose[cryptography]",
  "python-multipart",
  "lightgbm==3.3.1",
  "matplotlib",
  "numpy",
  "pandas",
  "scikit_learn",
  "passlib",
  "pydantic",
  "joblib",
  "pyarrow"
]

[project.urls]
homepage = "https://github.com/ThomasBury/AceBet"
documentation = "https://github.com/ThomasBury/AceBet"
repository = "https://github.com/ThomasBury/AceBet.git"
changelog = "https://github.com/ThomasBury/AceBet"
Tracker = "https://github.com/ThomasBury/AceBet/issues"

[project.optional-dependencies]
doc = [
    "ipykernel",
    "ipython_genutils",
    "pandoc",
    "sphinx>=7.0.0",
    "sphinxawesome-theme>=4.1.0",
    "nbsphinx>=0.9.2",
    "sphinx-autodoc-typehints>=1.21.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.1",
]
lint = [
    "black",
    "flake8"
]
test = [
    "python-multipart>=0.0.6",
    "pytest",
    "pytest-cov",
    "httpx"
]

[tool.black]
line-length = 88
target_version = ['py310']
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | \.joblib
  | \.jpg
  | data
  | dist
)/
'''
